# DISCO

./: .gitignore  CITATION.cff.bak  README.md  contrast_factors.json  pyproject.toml
cfactor/: InvariantCoefficients.py  __init__.py  __main__.py  contrast.py  elasticity.py  gbuilder.py  geometry.py  io_input.py  main.py  models.py  symmetry.py  utils.py  wppm_macro.py
disco/: cli.py
docs/: INPUT_FORMAT.md  OUTPUT_FORMAT.md  THEORY_OVERVIEW.md
examples/: 4H-SiC_hexagonal.json  beta_Ga2O3_monoclinic.json
test/: 4H-SiC_P63mc_hexagonal_plane[1_0_0]_burgers[1_1_0].single_crystal_edge.tsv  4H-SiC_P63mc_hexagonal_plane[1_0_0]_burgers[1_1_0].single_crystal_screw.tsv  4H-SiC_P63mc_hexagonal_plane[1_0_0]_burgers[1_1_0].txt  4H-SiC_P63mc_hexagonal_plane[1_0_0]_burgers[1_1_0].wppm.inp  4H-SiC_P63mc_hexagonal_plane[1_0_0]_burgers[1_1_0]_comparison_phi0.csv  4H-SiC_P63mc_hexagonal_plane[1_0_0]_burgers[1_1_0]_comparison_phi90.csv
